[Chromium] chromium/linux breaks expectation of select popup background due to bad UA css rules https://bugs.webkit.org/show_bug.cgi?id=111873
Patch by Xiyuan Xia <xiyuan@chromium.org> on 2013-03-11
Reviewed by Tony Chang.

Source/WebCore:

On linux the default <select> background color is too dark to use as the
popup background color.  Last fixes:
https://bugs.webkit.org/show_bug.cgi?id=54115 and
https://bugs.webkit.org/show_bug.cgi?id=56023
attempt to fix the problem by applying a lighter background using
special <option> selector. This breaks expectations of some websites.

This CL reverts the bad UA css rules above and provides the lighter
background color if <select> and <option> elements are using the default
background.

No new tests, this tests <select> popups and can be verified by ManualTests/select-scroll.html.

* css/themeChromiumLinux.css:
(select):
* platform/PopupMenuStyle.h:
(WebCore::PopupMenuStyle::PopupMenuStyle):
(WebCore::PopupMenuStyle::backgroundColorType):
(PopupMenuStyle):
* platform/chromium/PopupListBox.cpp:
(WebCore::PopupListBox::paintRow):
* rendering/RenderMenuList.cpp:
(WebCore::RenderMenuList::itemStyle):
(WebCore::RenderMenuList::getItemBackgroundColor):
* rendering/RenderMenuList.h:
(RenderMenuList):
* rendering/RenderSearchField.cpp:
(WebCore::RenderSearchField::menuStyle):
* rendering/RenderThemeChromiumDefault.cpp:
(WebCore::RenderThemeChromiumDefault::systemColor):

Source/WebKit/chromium:

Update PopupMenuStyle constructor call sites.

* src/AutofillPopupMenuClient.cpp:
(WebKit::AutofillPopupMenuClient::initialize):

Canonical link: https://commits.webkit.org/130358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145406 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/themeChromiumLinux.css
+++ b/Source/WebCore/css/themeChromiumLinux.css
@@ -31,13 +31,8 @@
 /* These styles override other user-agent styles for Chromium on Linux. */
 
 select {
-    background-color: #dddddd;
-}
-
-select:not([size]):not([multiple]) option,
-select[size="0"] option,
-select[size="1"] option {
-    background-color: #f7f7f7;
+    /* Selects look like buttons with a drop down triangle on Linux. */
+    background-color: ButtonFace;
 }
 
 input[type=range] {
